--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="Adcombo">
-<meta property="og:description" content="Adband">
-<meta property="og:image" content="https://catherineasquithgallery.com/uploads/posts/2021-03/1614644228_7-p-fon-parka-dlya-fotoshopa-7.jpg">
+  <meta property="og:title" content="Tin vui cho tất cả nam giới!">
+<meta property="og:description" content="Cách đã được chứng minh">
+<meta property="og:image" content="https://i.ibb.co/5sbSB0G/5-cm-dalam-12-hari-23.png">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
