--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="Tin vui cho tất cả nam giới!">
-<meta property="og:description" content="Cách đã được chứng minh">
-<meta property="og:image" content="https://i.ibb.co/5sbSB0G/5-cm-dalam-12-hari-23.png">
+  <meta property="og:title" content="like">
+<meta property="og:description" content="relax">
+<meta property="og:image" content="https://cdn.culture.ru/images/9c892513-1700-5e85-80e7-2ad7de0b67d1">
   <title>New Promotion</title>
   <meta name="description" content="Cold">
   <meta name="keywords" content="Nutrition">
